Fix Node construction, ensure dns is propagated after service creation
Signed-off-by: Olivier Lamy <olamy@apache.org>